--- a/NubeBooks/Areas/Proformas/Views/Proformas/Index.cshtml
+++ b/NubeBooks/Areas/Proformas/Views/Proformas/Index.cshtml
@@ -10,6 +10,7 @@
     <a href="@Url.Action("Proforma", "Proformas")" class="btn m-b-xs btn-sm btn-success btn-addon pull-right"><i class="fa fa-plus"></i>Agregar Nuevo</a>
     <h1 class="m-n font-thin h3">Proformas</h1>
 </div>
+@Html.Partial("_showAlertMessages")
 <div class="wrapper-md">
     <div class="panel panel-default">
         <div class="table-responsive">
@@ -51,7 +52,7 @@
                                 <td>@(item.Estado == 1 ? "Activo" : "Inactivo" )</td>
                                 @{ var rIcon = ViewBag.EsUsuarioExterno ? "search" : "pencil"; var rTitle = ViewBag.EsUsuarioExterno ? "Visualizar" : "Editar"; }
                                 <td class="text-center">
-                                    <a href="@Url.Action("Proforma", "Admin", new { id = item.IdProforma })"><i class="fa fa-@rIcon" title="@rTitle"></i>&nbsp;&nbsp;</a>
+                                    <a href="@Url.Action("Proforma", "Proformas", new { id = item.IdProforma })"><i class="fa fa-@rIcon" title="@rTitle"></i>&nbsp;&nbsp;</a>
                                 </td>
                             </tr>
                                         }
